fix word-wrapping edit button
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@14099 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -226,7 +226,11 @@
 						position:absolute;
 						top: 50%;
 						left: 50%;
-
+						&, * {
+							word-break: normal;
+							word-wrap: normal;
+							white-space: nowrap;
+						}
 
 						.edit{
 							font-family: $font !important;
